# sdk-nrf

./: CODEOWNERS  west.yml
applications/smeeze/: CMakeLists.txt  Kconfig  sample.yaml
applications/smeeze/configuration/thingy53_nrf5340_cpuapp/: app.overlay  pm_static.yml  prj.conf  prj_release.conf
applications/smeeze/configuration/thingy53_nrf5340_cpuapp/child_image/mcuboot/boards/: thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
applications/smeeze/include/: zb_mem_config_custom.h
applications/smeeze/src/: app_door_lock.c  app_door_lock.h  app_sfinder.c  app_sfinder.h  app_smeeze.c  app_smeeze.h  app_wstation.c  app_wstation.h  battery.c  battery.h  door_lock.c  door_lock.h  main.c  sensor.c  sensor.h  sfinder.c  sfinder.h  status_led.c  status_led.h  weather_station.c  weather_station.h
cmake/sysbuild/: suit.cmake
doc/nrf/: samples.rst
drivers/: CMakeLists.txt  Kconfig
drivers/stepper/: CMakeLists.txt  Kconfig  stepper.c
dts/bindings/stepper/: zephyr,stepper.yaml
include/drivers/: stepper.h
samples/: CMakeLists.txt  Kconfig
samples/bluetooth/ble_app/: Kconfig.sysbuild  prj.conf
samples/drivers/stepper/: CMakeLists.txt  prj.conf
samples/suit/smp_transfer/: CMakeLists.txt
samples/zigbee/image_server/: CMakeLists.txt  prj.conf  sample.yaml
share/ncs-package/cmake/: NcsConfig.cmake
snippets/nrf54h-sdfw-v8/: README.rst  snippet.yml
snippets/nrf54h-sdfw-v8/boards/: nrf54h20dk_nrf54h20-memory-map-v8.dtsi  nrf54h20dk_nrf54h20_cpuapp.overlay  (+1 more)
subsys/suit/: CMakeLists.txt  Kconfig
sysbuild/: CMakeLists.txt  Kconfig.sysbuild
(+43 files in other folders)
